--- a/src/css/favorites.css
+++ b/src/css/favorites.css
@@ -9,6 +9,218 @@ button {
   outline: 1px solid transparent;
   background-color: transparent;
 }
+body {
+  font-family: var(--main-font-family);
+  font-size: 16px;
+  color: var(--primary);
+  background-color: var(--primary-light);
+  line-height: 1.125;
+  overflow-x: hidden;
+}
+
+html {
+  overflow-x: hidden;
+  scrollbar-width: none;
+}
+
+.container {
+  width: 100%;
+  max-width: calc(var(--container-max-width) + var(--main-padding) * 2);
+  margin: 0 auto;
+  padding: 0 var(--main-padding);
+}
+
+.section {
+  padding-bottom: 80px;
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: fit-content;
+  outline: none;
+  width: 100%;
+  padding: 12px 24px;
+  border-radius: 30px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.3em;
+  transition: var(--transition);
+}
+
+@media screen and (min-width: 768px) {
+  .btn {
+    font-size: 16px;
+    line-height: 1.5em;
+  }
+}
+
+.btn-primary {
+  background-color: rgba(var(--rgba-light));
+  border: 1px solid transparent;
+  color: rgba(var(--rgba-black));
+}
+
+.btn-primary:hover {
+  background-color: rgba(var(--rgba-black));
+  border: 1px solid rgba(var(--rgba-light));
+  color: rgba(var(--rgba-light));
+}
+
+.btn-secondary {
+  background-color: rgba(var(--rgba-black));
+  border: 1px solid rgba(var(--rgba-light));
+  color: rgba(var(--rgba-light));
+}
+
+.btn-secondary:hover {
+  background-color: rgba(var(--rgba-light));
+  border: 1px solid transparent;
+  color: rgba(var(--rgba-black));
+}
+
+.is-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+  outline: transparent;
+  outline-offset: 0;
+  visibility: hidden;
+  pointer-events: none;
+  opacity: 0 !important;
+}
+
+.hidden {
+  display: none;
+}
+
+.no-scroll {
+  overflow: hidden;
+}
+
+@media screen and (min-width: 768px) {
+  .section {
+    padding-bottom: 100px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .section {
+    padding-bottom: 150px;
+  }
+}
+
+.modal-overlay {
+  background-color: rgba(var(--rgba-bg-color), 0.4);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: auto;
+  opacity: 0;
+  pointer-events: none;
+  transition: var(--transition);
+}
+
+.modal-overlay.is-open {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.close-modal-btn {
+  position: absolute;
+  top: 14px;
+  right: 14px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .close-modal-btn {
+    top: 16px;
+    right: 16px;
+  }
+}
+
+.close-modal-icon {
+  width: 24px;
+  height: 24px;
+  stroke: rgba(var(--rgba-light));
+}
+
+@media screen and (min-width: 768px) {
+  .close-modal-icon {
+    width: 28px;
+    height: 28px;
+  }
+}
+
+
+:root {
+  --white: #ffffff;
+  --primary: #242424; /** texts on libgt bg, bgs */
+  --primary-disabled: rgba(36, 36, 36, 0.1); /** disabled pagination btns ... */
+  --primary-inactive: #d4d4d4; /** inactive pages ... */
+  --primary-light: #f4f4f4; /** light bg, text color on dark bg */
+  --primary-light-inactive: rgba(244, 244, 244, 0.2); /** not selected star */
+  --gold: #eea10c; /** selected star */
+  --light-blue-gray: #c6cdd1;
+
+  --rgba-bg-color: 4, 4, 4;
+  --rgba-black: 36, 36, 36;
+  --rgba-light-gray: 212, 212, 212;
+  --rgba-orange: 238, 161, 12;
+  --rgba-light: 244, 244, 244;
+
+  /* Borders */
+  --border-radius-lg: 30px;
+  --border-radius-md: 20px;
+  --border-radius-sm: 12px;
+
+  /* Spaces */
+  --main-padding: 1.25rem;
+
+  /* Breackpoints */
+  --breakpoint-sm: 375px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 1440px;
+  --container-max-width: 335px;
+
+  /* Font */
+  --main-font-family: 'DMSans', sans-serif;
+
+  /* Transition */
+  --transition-fast: 330ms cubic-bezier(0.4, 0, 0.2, 1);
+  --transition: 350ms ease-in;
+}
+
+@media screen and (min-width: 768px) {
+  :root {
+    --main-padding: 1rem;
+    --container-max-width: 704px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  :root {
+    --container-max-width: 1376px;
+  }
+}
+
 
 .favorites h1 {
   color: var(--primary);
@@ -64,18 +276,10 @@ button {
   width: 8px;
 }
 
-.favorites__list::-webkit-scrollbar-thumb:hover {
-  /* background: rgba(36, 36, 36, 0.1); */
-}
-.favorites__item {
-}
-.favorites__card {
-}
 
-/* ========= */
 
-.quote {
-}
+
+
 .quote__article {
   border-radius: var(--border-radius-md);
   background-color: var(--primary);
@@ -94,8 +298,7 @@ button {
   overflow: hidden;
 }
 
-.quote__body {
-}
+
 .quote__top {
   display: flex;
   align-items: center;
@@ -243,8 +446,7 @@ button {
 .card__start i svg {
   max-width: 100%;
 }
-.card__body {
-}
+
 .card__exercise {
   display: flex;
   align-items: center;
