--- a/src/css/burger-menu.css
+++ b/src/css/burger-menu.css
@@ -65,6 +65,11 @@
   border-radius: 10px;
 }
 
+.soc-item.white:focus {
+    background-color: rgba(244, 244, 244, 1);
+    transform: scale(1.1);
+} 
+
 .soc-icon.white {
   display: flex;
   width: 28px;
@@ -72,4 +77,9 @@
   fill: #f4f4f4;
   justify-content: center;
   align-items: center;
+}
+
+.soc-icon.white:focus {
+    fill: var(--primary);
+    transform: scale(1.1);
 }
