--- a/src/partials/favorites.html
+++ b/src/partials/favorites.html
@@ -5,12 +5,16 @@
       <div class="favorites__quote quote">
         <article class="quote__article">
           <div class="quote__logo">
-            <img src="./img/sprite.svg#commas" alt="quote logo" />
+            <svg class="icon" width="34" height="32">
+  <use href="./img/sprite.svg#running-stick-figure-border"></use>
+</svg>
           </div>
           <div class="quote__body">
             <div class="quote__top">
               <h2 class="quote__ttl">Quote of the day</h2>
-              <img src="img/favorites/text.svg" alt="icon" />
+              <svg class="icon" width="24" height="24">
+  <use href="./img/sprite.svg#commas"></use>
+</svg>
             </div>
             <p class="quote__text">
               A lot of times I find that people who are blessed with the most
@@ -24,7 +28,9 @@
         <ul class="quote__daily-list">
           <li class="quote__daily-item">
             <div class="quote__daily-icon">
-              <img src="img/favorites/fluent.svg" alt="icon" />
+              <svg class="icon" width="24" height="24">
+  <use href="./img/sprite.svg#gym"></use>
+</svg>
             </div>
             <p class="quote__time-value">110 min</p>
             <p class="quote__sports">Daily norm of sports</p>
