--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -10,36 +10,24 @@
 
         <ul class="footer-socials">
           <li class="footer-socials-item">
-            <a
-              class="footer-socials-link"
-              href="https://www.facebook.com/goITclub/"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
+            <a class="footer-socials-link" href="https://www.facebook.com/goITclub/" target="_blank"
+              rel="noopener noreferrer">
               <svg class="footer-social-icon" width="24" height="24">
                 <use href="./img/sprite.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="footer-socials-item">
-            <a
-              class="footer-socials-link"
-              href="https://www.instagram.com/goitclub/"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
+            <a class="footer-socials-link" href="https://www.instagram.com/goitclub/" target="_blank"
+              rel="noopener noreferrer">
               <svg class="footer-social-icon" width="24" height="24">
                 <use href="./img/sprite.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="footer-socials-item">
-            <a
-              class="footer-socials-link"
-              href="https://www.youtube.com/c/GoIT"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
+            <a class="footer-socials-link" href="https://www.youtube.com/c/GoIT" target="_blank"
+              rel="noopener noreferrer">
               <svg class="footer-social-icon" width="24" height="24">
                 <use href="./img/sprite.svg#icon-youtube"></use>
               </svg>
@@ -59,18 +47,9 @@
           </p>
 
           <form class="footer-form js-footer-form">
-            <label for="email-input" class="visually-hidden"
-              >Email address</label
-            >
-            <input
-              id="email-input"
-              class="footer-input"
-              pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
-              type="email"
-              name="email"
-              placeholder="Email"
-              required
-            />
+            <label for="email-input" class="visually-hidden" hidden>Email address</label>
+            <input id="email-input" class="footer-input" pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$" type="email"
+              name="email" placeholder="Email" required />
             <button class="btn-subscribe" type="submit">Send</button>
           </form>
         </div>
@@ -82,9 +61,7 @@
       <div>
         <a href="#" target="_blank" rel="noopener noreferrer">Privacy Policy</a>
         <span>/</span>
-        <a href="#" target="_blank" rel="noopener noreferrer"
-          >Terms of Service</a
-        >
+        <a href="#" target="_blank" rel="noopener noreferrer">Terms of Service</a>
       </div>
       <p>©2023</p>
     </div>
