--- a/src/css/filtered-exercises.css
+++ b/src/css/filtered-exercises.css
@@ -38,6 +38,8 @@
     flex-direction: column;
     justify-content: space-between;
     transition: transform 0.2s;
+    cursor: pointer;
+
 
     &:hover {
       transform: translateY(-5px);
@@ -76,7 +78,7 @@
         justify-content: space-between;
         background: transparent;
         border: none;
-        font-weight: 400;
+        font-weight: 300;
         cursor: pointer;
         display: inline-flex;
         align-items: center;
