--- a/src/partials/burger-menu.html
+++ b/src/partials/burger-menu.html
@@ -8,7 +8,7 @@
 
     <nav class="menu">
       <a href="./index.html">Home</a>
-      <a href="./public/favorites.html">Favorites</a>
+      <a href="./favorites.html">Favorites</a>
     </nav>
     <ul class="soc-items white">
       <li class="soc-item white">
