--- a/src/css/exercise-modal.css
+++ b/src/css/exercise-modal.css
@@ -1,8 +1,7 @@
 .exercise-modal-card {
-  margin: 20px auto;
   position: relative;
   display: flex;
-  height: auto;
+  height: 'auto';
   flex-direction: column;
   padding: 40px 20px;
   width: 100%;
@@ -10,37 +9,6 @@
   border-radius: 20px;
   color: rgba(var(--rgba-light));
   background-color: rgba(var(--rgba-black));
-  font-size: 12px;
-  line-height: 1.3em;
-}
-.exercise-gif-wrapper {
-  flex-shrink: 0;
-  display: inline-block;
-  position: relative;
-  overflow: hidden;
-  max-width: 270px;
-  max-height: 250px;
-
-  aspect-ratio: 1.08 / 1;
-
-  border-radius: 12px;
-  background:
-    linear-gradient(
-      0deg,
-      rgba(var(--rgba-black), 0.2) 0%,
-      rgba(var(--rgba-black), 0.2) 100%
-    ),
-    rgba(var(--rgba-light-gray)) -7.072px -25.893px / 107.482% 121.729%
-      no-repeat;
-  background-blend-mode: overlay;
-}
-
-.exercise-gif-wrapper img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: block;
-  object-fit: cover;
 }
 
 @media screen and (min-width: 768px) {
@@ -51,6 +19,22 @@
   }
 }
 
+.exercise-gif-wrapper {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+  max-width: 295px;
+  border-radius: 12px;
+  background:
+    linear-gradient(
+      0deg,
+      rgba(var(--rgba-black), 0.2) 0%,
+      rgba(var(--rgba-black), 0.2) 100%
+    ),
+    rgba(var(--rgba-light-gray)) -7.072px -25.893px / 107.482% 121.729%
+      no-repeat;
+}
+
 @media screen and (min-width: 768px) {
   .exercise-gif-wrapper {
     flex-shrink: 0;
@@ -58,6 +42,13 @@
     width: 270px;
     height: 260px;
   }
+}
+
+.exercise-gif {
+  display: block;
+  width: 100%;
+  height: auto;
+  mix-blend-mode: multiply;
 }
 
 .exercise-modal-title {
@@ -99,8 +90,8 @@
 
 .exercise-modal-rating-icon {
   margin-right: 4px;
-  width: 12px;
-  height: 12px;
+  width: 14px;
+  height: 13px;
   fill: rgba(var(--rgba-light), 0.2);
 }
 
@@ -112,8 +103,8 @@
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  row-gap: 16px;
-  margin: 16px 0;
+  row-gap: 20px;
+  margin: 30px 0;
 }
 
 @media screen and (min-width: 768px) {
@@ -183,7 +174,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  margin-top: 24px;
+  margin-top: 40px;
 }
 
 @media screen and (min-width: 768px) {
